编译为可执行文件